--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
-  "hosting": {
-    "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+	"hosting": {
+		"public": "build", // "public" is the only required attribute for Hosting
+		"cleanUrls": true, // The cleanUrls attribute allows you to control whether or not URLs should include the .html extension
+		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+	}
 }
