--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+language: node_js
+node_js:
+    - node
+branches:
+    only:
+        - master
+script:
+    - echo "Skipping tests"
 deploy:
     provider: firebase
     edge: true
