--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 install:
     - yarn install
 script:
-    - yarn run build
+    - CI=false npm run build
 deploy:
     provider: firebase
     cleanup: true
