--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 after_success:
     - ls -l
 before_deploy:
-    - ls -l
+    - cd build && ls -l
 after_deploy:
     - ls -l
 after_script:
