--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
 	"hosting": {
-		"public": "build", // "public" is the only required attribute for Hosting
+		"public": "./build", // "public" is the only required attribute for Hosting
 		"cleanUrls": true, // The cleanUrls attribute allows you to control whether or not URLs should include the .html extension
 		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
 	}
