--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
 	"private": true,
 	"description": "BeerXP Web - Admin",
 	"author": "DashboardPack.com",
-	"homepage": "https://beerxp-dev.web.app/",
+	"homepage": "./",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/BeerXP/web"
 	},
 	"dependencies": {
-		"@fortawesome/fontawesome": "^1.1.8",
 		"@fortawesome/fontawesome-free": "^5.12.1",
 		"@fortawesome/fontawesome-free-solid": "^5.0.13",
 		"@fortawesome/fontawesome-svg-core": "^1.2.27",
