--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"draft-js": "^0.11.4",
 		"draftjs-to-html": "^0.9.1",
 		"dropzone": "^5.7.0",
+		"firebase": "^7.12.0",
 		"google-map-react": "^1.1.6",
 		"hamburgers": "^1.1.3",
 		"html-to-draftjs": "^1.5.0",
@@ -156,5 +157,8 @@
 		"not dead",
 		"not ie <= 11",
 		"not op_mini all"
-	]
+	],
+	"devDependencies": {
+		"eslint-plugin-react-hooks": "^2.5.1"
+	}
 }
